# FastAPI

./: .gitignore  main.py  pyproject.toml  test.sh
app/configs/: __init__.py  base_settings.py
app/dtos/: article_and_comments_response.py
app/models/: article.py  base_model.py  comment.py
app/routers/: article_router.py  health_router.py
app/services/: article_service.py
app/tests/routers/: test_article_router.py
app/tests/services/: test_article_service.py
